# quran

./: .editorconfig  .env.api.example  .env.cli.example  .env.example  .env.web.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  compose.yaml  package-lock.json  package.json
apps/api/: README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260430_0001_initial_qurankit_schema.py  20260430_0002_add_exact_search_columns_and_indexes.py  20260430_0003_add_auth_tokens_and_plan_completion.py
apps/api/qurankit_api/: app.py  main.py
apps/api/qurankit_api/api/: __init__.py  router.py
apps/api/qurankit_api/api/routes/: __init__.py  auth.py  browse.py  health.py  search.py  study.py
apps/api/qurankit_api/core/: __init__.py  auth.py  config.py  errors.py  search.py  study.py
apps/api/qurankit_api/data/: __init__.py  pipeline.py  source_metadata.py  upstream_sql.py
apps/api/qurankit_api/db/: __init__.py  base.py  dependencies.py  seed.py  session.py
apps/api/qurankit_api/models/: __init__.py  core.py  user_data.py
apps/api/qurankit_api/schemas/: __init__.py  auth.py  browse.py  errors.py  health.py  search.py  study.py
apps/api/tests/: __init__.py  conftest.py  test_browse.py  test_data_pipeline.py  test_database_migrations.py  test_database_models.py  test_database_seed.py  test_errors.py  test_health.py  test_openapi.py  test_private_study.py  test_search.py
apps/api/tests/support/: __init__.py  sample_dataset.py
apps/cli/: README.md  pyproject.toml
apps/cli/src/qurankit/: __init__.py  app.py  backends.py  config.py  personal.py
apps/cli/tests/: conftest.py  test_backends.py  test_cli_config.py  test_cli_lookup.py  test_cli_personal.py  test_config.py  test_personal.py
data/: README.md
docker/: api.Dockerfile  web.Dockerfile
docs/: api.md  architecture.md  cli.md  database.md  (+12 more)
(+91 files in other folders)
