[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qurankit-api"
version = "0.1.0"
description = "FastAPI backend scaffold for QuranKit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14,<2.0",
  "fastapi>=0.115,<1.0",
  "pydantic-settings>=2.6,<3.0",
  "psycopg[binary]>=3.2,<4.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.3,<9.0",
]

[tool.setuptools.packages.find]
include = ["qurankit_api*"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
